--- a/lab1/notebook.ipynb
+++ b/lab1/notebook.ipynb
@@ -9,12 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-11T17:04:26.863739Z",
-     "start_time": "2024-03-11T17:04:26.845668Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
